HW03/pods/hw03-ingress-sm.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: kube-system
  name: nginx-ingress-controller
  labels:
    app: nginx-ingress-controller
spec:
  selector:
    app.kubernetes.io/name: nginx-ingress-controller
  type: ClusterIP
  clusterIP: None
  ports:
    - name: http-metrics
      port: 10254
      targetPort: 10254
      protocol: TCP
