HW03/pods/hw03-mongo-sm.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongodb-exporter
  labels:
    app: mongodb-exporter
spec:
  selector:
    app: mongodb
  ports:
    - name: mongodb-exp
      port: 9216
      targetPort: 9216
      protocol: TCP
  clusterIP: None
