HW03/pods/hw03-mongo.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongodb
  labels:
    app: mongodb
spec:
  ports:
    - name: mongodb
      port: 27017
  selector:
    app: mongodb
  clusterIP: None
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongodb
  labels:
    app: mongodb
spec:
  selector:
    matchLabels:
      app: mongodb
  replicas: 1
  serviceName: "mongodb"
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      containers:
        - name: mongodb
          image: aristoveugene/aeuge:arch-02-db
          volumeMounts:
            - mountPath: /data/db
              name: mongodbstorage
            - mountPath: /etc/timezone
              name: timezone
            - mountPath: /etc/localtime
              name: localtime
          ports:
            - name: mongodb
              containerPort: 27017  
        - name: mongodb-exporter
          image: bitnami/mongodb-exporter:latest
          ports:
            - name: mongodb-exp
              containerPort: 9216  
      volumes:
        - name: timezone
          hostPath:
            path: /etc/timezone
        - name: localtime
          hostPath:
            path: /etc/localtime
  volumeClaimTemplates:
    - metadata:
        name: mongodbstorage
      spec:
        accessModes: [ "ReadWriteOnce" ]
        resources:
          requests:
            storage: 1Gi
